visualization/testdata/config-dump-1.yaml
configs:
- "@type": type.googleapis.com/envoy.admin.v3.BootstrapConfigDump
  bootstrap:
    admin:
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 9901.0
    dynamic_resources:
      ads_config:
        api_type: GRPC
        grpc_services:
        - envoy_grpc:
            cluster_name: xds_cluster
        transport_api_version: V3
      cds_config:
        ads: {}
        resource_api_version: V3
      lds_config:
        ads: {}
        resource_api_version: V3
    layered_runtime:
      layers:
      - name: static_layer
        static_layer:
          overload:
            global_downstream_max_connections: 50000.0
    node:
      cluster: demo-cluster
      extensions:
      - category: filter_state.object
        name: envoy.filters.listener.original_dst.local_ip
      - category: filter_state.object
        name: envoy.filters.listener.original_dst.remote_ip
      - category: filter_state.object
        name: envoy.network.application_protocols
      - category: filter_state.object
        name: envoy.network.transport_socket.original_dst_address
      - category: filter_state.object
        name: envoy.network.upstream_server_name
      - category: filter_state.object
        name: envoy.network.upstream_subject_alt_names
      - category: filter_state.object
        name: envoy.string
      - category: filter_state.object
        name: envoy.tcp_proxy.cluster
      - category: filter_state.object
        name: envoy.tcp_proxy.disable_tunneling
      - category: filter_state.object
        name: envoy.tcp_proxy.per_connection_idle_timeout_ms
      - category: filter_state.object
        name: envoy.upstream.dynamic_host
      - category: filter_state.object
        name: envoy.upstream.dynamic_port
      - category: envoy.config.validators
        name: envoy.config.validators.minimum_clusters
      - category: envoy.config.validators
        name: envoy.config.validators.minimum_clusters_validator
        type_urls:
        - envoy.extensions.config.validators.minimum_clusters.v3.MinimumClustersValidator
      - category: envoy.upstream.local_address_selector
        name: envoy.upstream.local_address_selector.default_local_address_selector
        type_urls:
        - envoy.config.upstream.local_address_selector.v3.DefaultLocalAddressSelector
      - category: envoy.listener_manager_impl
        name: envoy.listener_manager_impl.default
        type_urls:
        - envoy.config.listener.v3.ListenerManager
      - category: envoy.listener_manager_impl
        name: envoy.listener_manager_impl.validation
        type_urls:
        - envoy.config.listener.v3.ValidationListenerManager
      - category: envoy.quic.server_preferred_address
        name: quic.server_preferred_address.datasource
        type_urls:
        - envoy.extensions.quic.server_preferred_address.v3.DataSourceServerPreferredAddressConfig
      - category: envoy.quic.server_preferred_address
        name: quic.server_preferred_address.fixed
        type_urls:
        - envoy.extensions.quic.server_preferred_address.v3.FixedServerPreferredAddressConfig
      - category: envoy.filters.udp.session
        name: envoy.filters.udp.session.dynamic_forward_proxy
        type_urls:
        - envoy.extensions.filters.udp.udp_proxy.session.dynamic_forward_proxy.v3.FilterConfig
      - category: envoy.filters.udp.session
        name: envoy.filters.udp.session.http_capsule
        type_urls:
        - envoy.extensions.filters.udp.udp_proxy.session.http_capsule.v3.FilterConfig
      - category: envoy.thrift_proxy.transports
        name: auto
      - category: envoy.thrift_proxy.transports
        name: framed
      - category: envoy.thrift_proxy.transports
        name: header
      - category: envoy.thrift_proxy.transports
        name: unframed
      - category: envoy.matching.input_matchers
        name: envoy.matching.matchers.cel_matcher
        type_urls:
        - xds.type.matcher.v3.CelMatcher
      - category: envoy.matching.input_matchers
        name: envoy.matching.matchers.consistent_hashing
        type_urls:
        - envoy.extensions.matching.input_matchers.consistent_hashing.v3.ConsistentHashing
      - category: envoy.matching.input_matchers
        name: envoy.matching.matchers.ip
        type_urls:
        - envoy.extensions.matching.input_matchers.ip.v3.Ip
      - category: envoy.matching.input_matchers
        name: envoy.matching.matchers.runtime_fraction
        type_urls:
        - envoy.extensions.matching.input_matchers.runtime_fraction.v3.RuntimeFraction
      - category: envoy.common.key_value
        name: envoy.key_value.file_based
        type_urls:
        - envoy.extensions.key_value.file_based.v3.FileBasedKeyValueStoreConfig
      - category: envoy.http.original_ip_detection
        name: envoy.http.original_ip_detection.custom_header
        type_urls:
        - envoy.extensions.http.original_ip_detection.custom_header.v3.CustomHeaderConfig
      - category: envoy.http.original_ip_detection
        name: envoy.http.original_ip_detection.xff
        type_urls:
        - envoy.extensions.http.original_ip_detection.xff.v3.XffConfig
      - category: envoy.upstream_options
        name: envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        type_urls:
        - envoy.extensions.upstreams.http.v3.HttpProtocolOptions
      - category: envoy.upstream_options
        name: envoy.extensions.upstreams.tcp.v3.TcpProtocolOptions
        type_urls:
        - envoy.extensions.upstreams.tcp.v3.TcpProtocolOptions
      - category: envoy.upstream_options
        name: envoy.upstreams.http.http_protocol_options
      - category: envoy.upstream_options
        name: envoy.upstreams.tcp.tcp_protocol_options
      - category: envoy.quic.server.crypto_stream
        name: envoy.quic.crypto_stream.server.quiche
        type_urls:
        - envoy.extensions.quic.crypto_stream.v3.CryptoServerStreamConfig
      - category: envoy.rds_factory
        name: envoy.rds_factory.default
      - category: envoy.filters.udp_listener
        name: envoy.filters.udp.dns_filter
        type_urls:
        - envoy.extensions.filters.udp.dns_filter.v3.DnsFilterConfig
      - category: envoy.filters.udp_listener
        name: envoy.filters.udp_listener.udp_proxy
        type_urls:
        - envoy.extensions.filters.udp.udp_proxy.v3.UdpProxyConfig
      - category: envoy.config_subscription
        name: envoy.config_subscription.ads
      - category: envoy.config_subscription
        name: envoy.config_subscription.ads_collection
      - category: envoy.config_subscription
        name: envoy.config_subscription.aggregated_grpc_collection
      - category: envoy.config_subscription
        name: envoy.config_subscription.delta_grpc
      - category: envoy.config_subscription
        name: envoy.config_subscription.delta_grpc_collection
      - category: envoy.config_subscription
        name: envoy.config_subscription.filesystem
      - category: envoy.config_subscription
        name: envoy.config_subscription.filesystem_collection
      - category: envoy.config_subscription
        name: envoy.config_subscription.grpc
      - category: envoy.config_subscription
        name: envoy.config_subscription.rest
      - category: envoy.stats_sinks
        name: envoy.dog_statsd
      - category: envoy.stats_sinks
        name: envoy.graphite_statsd
      - category: envoy.stats_sinks
        name: envoy.metrics_service
      - category: envoy.stats_sinks
        name: envoy.open_telemetry_stat_sink
      - category: envoy.stats_sinks
        name: envoy.stat_sinks.dog_statsd
        type_urls:
        - envoy.config.metrics.v3.DogStatsdSink
      - category: envoy.stats_sinks
        name: envoy.stat_sinks.graphite_statsd
        type_urls:
        - envoy.extensions.stat_sinks.graphite_statsd.v3.GraphiteStatsdSink
      - category: envoy.stats_sinks
        name: envoy.stat_sinks.hystrix
        type_urls:
        - envoy.config.metrics.v3.HystrixSink
      - category: envoy.stats_sinks
        name: envoy.stat_sinks.metrics_service
        type_urls:
        - envoy.config.metrics.v3.MetricsServiceConfig
      - category: envoy.stats_sinks
        name: envoy.stat_sinks.open_telemetry
        type_urls:
        - envoy.extensions.stat_sinks.open_telemetry.v3.SinkConfig
      - category: envoy.stats_sinks
        name: envoy.stat_sinks.statsd
        type_urls:
        - envoy.config.metrics.v3.StatsdSink
      - category: envoy.stats_sinks
        name: envoy.stat_sinks.wasm
        type_urls:
        - envoy.extensions.stat_sinks.wasm.v3.Wasm
      - category: envoy.stats_sinks
        name: envoy.statsd
      - category: envoy.http.cache
        name: envoy.extensions.http.cache.file_system_http_cache
        type_urls:
        - envoy.extensions.http.cache.file_system_http_cache.v3.FileSystemHttpCacheConfig
      - category: envoy.http.cache
        name: envoy.extensions.http.cache.simple
        type_urls:
        - envoy.extensions.http.cache.simple_http_cache.v3.SimpleHttpCacheConfig
      - category: envoy.quic.connection_debug_visitor
        name: envoy.quic.connection_debug_visitor.basic
        type_urls:
        - envoy.extensions.quic.connection_debug_visitor.v3.BasicConfig
      - category: envoy.access_loggers.extension_filters
        name: envoy.access_loggers.extension_filters.cel
        type_urls:
        - envoy.extensions.access_loggers.filters.cel.v3.ExpressionFilter
      - category: envoy.udp_packet_writer
        name: envoy.udp_packet_writer.default
        type_urls:
        - envoy.extensions.udp_packet_writer.v3.UdpDefaultWriterFactory
      - category: envoy.udp_packet_writer
        name: envoy.udp_packet_writer.gso
        type_urls:
        - envoy.extensions.udp_packet_writer.v3.UdpGsoBatchWriterFactory
      - category: envoy.route.early_data_policy
        name: envoy.route.early_data_policy.default
        type_urls:
        - envoy.extensions.early_data.v3.DefaultEarlyDataPolicy
      - category: envoy.dubbo_proxy.protocols
        name: dubbo
      - category: envoy.thrift_proxy.filters
        name: envoy.filters.thrift.header_to_metadata
        type_urls:
        - envoy.extensions.filters.network.thrift_proxy.filters.header_to_metadata.v3.HeaderToMetadata
      - category: envoy.thrift_proxy.filters
        name: envoy.filters.thrift.payload_to_metadata
        type_urls:
        - envoy.extensions.filters.network.thrift_proxy.filters.payload_to_metadata.v3.PayloadToMetadata
      - category: envoy.thrift_proxy.filters
        name: envoy.filters.thrift.rate_limit
        type_urls:
        - envoy.extensions.filters.network.thrift_proxy.filters.ratelimit.v3.RateLimit
      - category: envoy.thrift_proxy.filters
        name: envoy.filters.thrift.router
        type_urls:
        - envoy.extensions.filters.network.thrift_proxy.router.v3.Router
      - category: envoy.compression.compressor
        name: envoy.compression.brotli.compressor
        type_urls:
        - envoy.extensions.compression.brotli.compressor.v3.Brotli
      - category: envoy.compression.compressor
        name: envoy.compression.gzip.compressor
        type_urls:
        - envoy.extensions.compression.gzip.compressor.v3.Gzip
      - category: envoy.compression.compressor
        name: envoy.compression.zstd.compressor
        type_urls:
        - envoy.extensions.compression.zstd.compressor.v3.Zstd
      - category: envoy.formatter
        name: envoy.formatter.cel
        type_urls:
        - envoy.extensions.formatter.cel.v3.Cel
      - category: envoy.formatter
        name: envoy.formatter.metadata
        type_urls:
        - envoy.extensions.formatter.metadata.v3.Metadata
      - category: envoy.formatter
        name: envoy.formatter.req_without_query
        type_urls:
        - envoy.extensions.formatter.req_without_query.v3.ReqWithoutQuery
      - category: envoy.config_mux
        name: envoy.config_mux.delta_grpc_mux_factory
      - category: envoy.config_mux
        name: envoy.config_mux.grpc_mux_factory
      - category: envoy.config_mux
        name: envoy.config_mux.new_grpc_mux_factory
      - category: envoy.config_mux
        name: envoy.config_mux.sotw_grpc_mux_factory
      - category: envoy.retry_priorities
        name: envoy.retry_priorities.previous_priorities
        type_urls:
        - envoy.extensions.retry.priority.previous_priorities.v3.PreviousPrioritiesConfig
      - category: envoy.bootstrap
        name: envoy.bootstrap.internal_listener
        type_urls:
        - envoy.extensions.bootstrap.internal_listener.v3.InternalListener
      - category: envoy.bootstrap
        name: envoy.bootstrap.wasm
        type_urls:
        - envoy.extensions.wasm.v3.WasmService
      - category: envoy.bootstrap
        name: envoy.extensions.network.socket_interface.default_socket_interface
        type_urls:
        - envoy.extensions.network.socket_interface.v3.DefaultSocketInterface
      - category: envoy.quic.proof_source
        name: envoy.quic.proof_source.filter_chain
        type_urls:
        - envoy.extensions.quic.proof_source.v3.ProofSourceConfig
      - category: envoy.path.rewrite
        name: envoy.path.rewrite.uri_template.uri_template_rewriter
        type_urls:
        - envoy.extensions.path.rewrite.uri_template.v3.UriTemplateRewriteConfig
      - category: envoy.http.stateful_session
        name: envoy.http.stateful_session.cookie
        type_urls:
        - envoy.extensions.http.stateful_session.cookie.v3.CookieBasedSessionState
      - category: envoy.http.stateful_session
        name: envoy.http.stateful_session.header
        type_urls:
        - envoy.extensions.http.stateful_session.header.v3.HeaderBasedSessionState
      - category: envoy.internal_redirect_predicates
        name: envoy.internal_redirect_predicates.allow_listed_routes
        type_urls:
        - envoy.extensions.internal_redirect.allow_listed_routes.v3.AllowListedRoutesConfig
      - category: envoy.internal_redirect_predicates
        name: envoy.internal_redirect_predicates.previous_routes
        type_urls:
        - envoy.extensions.internal_redirect.previous_routes.v3.PreviousRoutesConfig
      - category: envoy.internal_redirect_predicates
        name: envoy.internal_redirect_predicates.safe_cross_scheme
        type_urls:
        - envoy.extensions.internal_redirect.safe_cross_scheme.v3.SafeCrossSchemeConfig
      - category: envoy.resource_monitors
        name: envoy.resource_monitors.fixed_heap
        type_urls:
        - envoy.extensions.resource_monitors.fixed_heap.v3.FixedHeapConfig
      - category: envoy.resource_monitors
        name: envoy.resource_monitors.injected_resource
        type_urls:
        - envoy.extensions.resource_monitors.injected_resource.v3.InjectedResourceConfig
      - category: envoy.dubbo_proxy.serializers
        name: dubbo.hessian2
      - category: envoy.transport_sockets.upstream
        name: envoy.transport_sockets.alts
        type_urls:
        - envoy.extensions.transport_sockets.alts.v3.Alts
      - category: envoy.transport_sockets.upstream
        name: envoy.transport_sockets.http_11_proxy
        type_urls:
        - envoy.extensions.transport_sockets.http_11_proxy.v3.Http11ProxyUpstreamTransport
      - category: envoy.transport_sockets.upstream
        name: envoy.transport_sockets.internal_upstream
        type_urls:
        - envoy.extensions.transport_sockets.internal_upstream.v3.InternalUpstreamTransport
      - category: envoy.transport_sockets.upstream
        name: envoy.transport_sockets.quic
        type_urls:
        - envoy.extensions.transport_sockets.quic.v3.QuicUpstreamTransport
      - category: envoy.transport_sockets.upstream
        name: envoy.transport_sockets.raw_buffer
        type_urls:
        - envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
      - category: envoy.transport_sockets.upstream
        name: envoy.transport_sockets.starttls
        type_urls:
        - envoy.extensions.transport_sockets.starttls.v3.UpstreamStartTlsConfig
      - category: envoy.transport_sockets.upstream
        name: envoy.transport_sockets.tap
        type_urls:
        - envoy.extensions.transport_sockets.tap.v3.Tap
      - category: envoy.transport_sockets.upstream
        name: envoy.transport_sockets.tcp_stats
        type_urls:
        - envoy.extensions.transport_sockets.tcp_stats.v3.Config
      - category: envoy.transport_sockets.upstream
        name: envoy.transport_sockets.tls
        type_urls:
        - envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
      - category: envoy.transport_sockets.upstream
        name: envoy.transport_sockets.upstream_proxy_protocol
        type_urls:
        - envoy.extensions.transport_sockets.proxy_protocol.v3.ProxyProtocolUpstreamTransport
      - category: envoy.transport_sockets.upstream
        name: raw_buffer
      - category: envoy.transport_sockets.upstream
        name: starttls
      - category: envoy.transport_sockets.upstream
        name: tls
      - category: envoy.http.injected_credentials
        name: envoy.http.injected_credentials.generic
        type_urls:
        - envoy.extensions.http.injected_credentials.generic.v3.Generic
      - category: envoy.http.injected_credentials
        name: envoy.http.injected_credentials.oauth2
        type_urls:
        - envoy.extensions.http.injected_credentials.oauth2.v3.OAuth2
      - category: envoy.resolvers
        name: envoy.ip
      - category: envoy.network.dns_resolver
        name: envoy.network.dns_resolver.cares
        type_urls:
        - envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig
      - category: envoy.network.dns_resolver
        name: envoy.network.dns_resolver.getaddrinfo
        type_urls:
        - envoy.extensions.network.dns_resolver.getaddrinfo.v3.GetAddrInfoDnsResolverConfig
      - category: envoy.tls.cert_validator
        name: envoy.tls.cert_validator.default
      - category: envoy.tls.cert_validator
        name: envoy.tls.cert_validator.spiffe
      - category: envoy.route_config_update_requester
        name: envoy.route_config_update_requester.default
      - category: envoy.matching.http.custom_matchers
        name: envoy.matching.custom_matchers.trie_matcher
        type_urls:
        - xds.type.matcher.v3.IPMatcher
      - category: envoy.compression.decompressor
        name: envoy.compression.brotli.decompressor
        type_urls:
        - envoy.extensions.compression.brotli.decompressor.v3.Brotli
      - category: envoy.compression.decompressor
        name: envoy.compression.gzip.decompressor
        type_urls:
        - envoy.extensions.compression.gzip.decompressor.v3.Gzip
      - category: envoy.compression.decompressor
        name: envoy.compression.zstd.decompressor
        type_urls:
        - envoy.extensions.compression.zstd.decompressor.v3.Zstd
      - category: quic.http_server_connection
        name: quic.http_server_connection.default
      - category: envoy.http.header_validators
        name: envoy.http.header_validators.envoy_default
        type_urls:
        - envoy.extensions.http.header_validators.envoy_default.v3.HeaderValidatorConfig
      - category: envoy.path.match
        name: envoy.path.match.uri_template.uri_template_matcher
        type_urls:
        - envoy.extensions.path.match.uri_template.v3.UriTemplateMatchConfig
      - category: envoy.upstreams
        name: envoy.filters.connection_pools.tcp.generic
        type_urls:
        - envoy.extensions.upstreams.tcp.generic.v3.GenericConnectionPoolProto
      - category: envoy.rate_limit_descriptors
        name: envoy.rate_limit_descriptors.expr
        type_urls:
        - envoy.extensions.rate_limit_descriptors.expr.v3.Descriptor
      - category: network.connection.client
        name: default
      - category: network.connection.client
        name: envoy_internal
      - category: envoy.matching.action
        name: envoy.matching.actions.format_string
        type_urls:
        - envoy.config.core.v3.SubstitutionFormatString
      - category: envoy.matching.action
        name: filter-chain-name
        type_urls:
        - google.protobuf.StringValue
      - category: envoy.connection_handler
        name: envoy.connection_handler.default
      - category: envoy.clusters
        name: envoy.cluster.eds
      - category: envoy.clusters
        name: envoy.cluster.logical_dns
      - category: envoy.clusters
        name: envoy.cluster.original_dst
      - category: envoy.clusters
        name: envoy.cluster.static
      - category: envoy.clusters
        name: envoy.cluster.strict_dns
      - category: envoy.clusters
        name: envoy.clusters.aggregate
      - category: envoy.clusters
        name: envoy.clusters.dynamic_forward_proxy
      - category: envoy.clusters
        name: envoy.clusters.redis
      - category: envoy.filters.http
        name: envoy.bandwidth_limit
      - category: envoy.filters.http
        name: envoy.buffer
      - category: envoy.filters.http
        name: envoy.cors
      - category: envoy.filters.http
        name: envoy.csrf
      - category: envoy.filters.http
        name: envoy.ext_authz
      - category: envoy.filters.http
        name: envoy.ext_proc
      - category: envoy.filters.http
        name: envoy.fault
      - category: envoy.filters.http
        name: envoy.filters.http.adaptive_concurrency
        type_urls:
        - envoy.extensions.filters.http.adaptive_concurrency.v3.AdaptiveConcurrency
      - category: envoy.filters.http
        name: envoy.filters.http.admission_control
        type_urls:
        - envoy.extensions.filters.http.admission_control.v3.AdmissionControl
      - category: envoy.filters.http
        name: envoy.filters.http.alternate_protocols_cache
        type_urls:
        - envoy.extensions.filters.http.alternate_protocols_cache.v3.FilterConfig
      - category: envoy.filters.http
        name: envoy.filters.http.aws_lambda
        type_urls:
        - envoy.extensions.filters.http.aws_lambda.v3.Config
        - envoy.extensions.filters.http.aws_lambda.v3.PerRouteConfig
      - category: envoy.filters.http
        name: envoy.filters.http.aws_request_signing
        type_urls:
        - envoy.extensions.filters.http.aws_request_signing.v3.AwsRequestSigning
        - envoy.extensions.filters.http.aws_request_signing.v3.AwsRequestSigningPerRoute
      - category: envoy.filters.http
        name: envoy.filters.http.bandwidth_limit
        type_urls:
        - envoy.extensions.filters.http.bandwidth_limit.v3.BandwidthLimit
      - category: envoy.filters.http
        name: envoy.filters.http.basic_auth
        type_urls:
        - envoy.extensions.filters.http.basic_auth.v3.BasicAuth
        - envoy.extensions.filters.http.basic_auth.v3.BasicAuthPerRoute
      - category: envoy.filters.http
        name: envoy.filters.http.buffer
        type_urls:
        - envoy.extensions.filters.http.buffer.v3.Buffer
        - envoy.extensions.filters.http.buffer.v3.BufferPerRoute
      - category: envoy.filters.http
        name: envoy.filters.http.cache
        type_urls:
        - envoy.extensions.filters.http.cache.v3.CacheConfig
      - category: envoy.filters.http
        name: envoy.filters.http.cdn_loop
        type_urls:
        - envoy.extensions.filters.http.cdn_loop.v3.CdnLoopConfig
      - category: envoy.filters.http
        name: envoy.filters.http.composite
        type_urls:
        - envoy.extensions.filters.http.composite.v3.Composite
      - category: envoy.filters.http
        name: envoy.filters.http.compressor
        type_urls:
        - envoy.extensions.filters.http.compressor.v3.Compressor
        - envoy.extensions.filters.http.compressor.v3.CompressorPerRoute
      - category: envoy.filters.http
        name: envoy.filters.http.connect_grpc_bridge
        type_urls:
        - envoy.extensions.filters.http.connect_grpc_bridge.v3.FilterConfig
      - category: envoy.filters.http
        name: envoy.filters.http.cors
        type_urls:
        - envoy.extensions.filters.http.cors.v3.Cors
        - envoy.extensions.filters.http.cors.v3.CorsPolicy
      - category: envoy.filters.http
        name: envoy.filters.http.credential_injector
        type_urls:
        - envoy.extensions.filters.http.credential_injector.v3.CredentialInjector
      - category: envoy.filters.http
        name: envoy.filters.http.csrf
        type_urls:
        - envoy.extensions.filters.http.csrf.v3.CsrfPolicy
      - category: envoy.filters.http
        name: envoy.filters.http.custom_response
        type_urls:
        - envoy.extensions.filters.http.custom_response.v3.CustomResponse
      - category: envoy.filters.http
        name: envoy.filters.http.decompressor
        type_urls:
        - envoy.extensions.filters.http.decompressor.v3.Decompressor
      - category: envoy.filters.http
        name: envoy.filters.http.dynamic_forward_proxy
        type_urls:
        - envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
        - envoy.extensions.filters.http.dynamic_forward_proxy.v3.PerRouteConfig
      - category: envoy.filters.http
        name: envoy.filters.http.ext_authz
        type_urls:
        - envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
        - envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
      - category: envoy.filters.http
        name: envoy.filters.http.ext_proc
        type_urls:
        - envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute
        - envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
      - category: envoy.filters.http
        name: envoy.filters.http.fault
        type_urls:
        - envoy.extensions.filters.http.fault.v3.HTTPFault
      - category: envoy.filters.http
        name: envoy.filters.http.file_system_buffer
        type_urls:
        - envoy.extensions.filters.http.file_system_buffer.v3.FileSystemBufferFilterConfig
      - category: envoy.filters.http
        name: envoy.filters.http.gcp_authn
        type_urls:
        - envoy.extensions.filters.http.gcp_authn.v3.GcpAuthnFilterConfig
      - category: envoy.filters.http
        name: envoy.filters.http.geoip
        type_urls:
        - envoy.extensions.filters.http.geoip.v3.Geoip
      - category: envoy.filters.http
        name: envoy.filters.http.grpc_field_extraction
        type_urls:
        - envoy.extensions.filters.http.grpc_field_extraction.v3.GrpcFieldExtractionConfig
      - category: envoy.filters.http
        name: envoy.filters.http.grpc_http1_bridge
        type_urls:
        - envoy.extensions.filters.http.grpc_http1_bridge.v3.Config
      - category: envoy.filters.http
        name: envoy.filters.http.grpc_http1_reverse_bridge
        type_urls:
        - envoy.extensions.filters.http.grpc_http1_reverse_bridge.v3.FilterConfig
        - envoy.extensions.filters.http.grpc_http1_reverse_bridge.v3.FilterConfigPerRoute
      - category: envoy.filters.http
        name: envoy.filters.http.grpc_json_transcoder
        type_urls:
        - envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
      - category: envoy.filters.http
        name: envoy.filters.http.grpc_stats
        type_urls:
        - envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
      - category: envoy.filters.http
        name: envoy.filters.http.grpc_web
        type_urls:
        - envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
      - category: envoy.filters.http
        name: envoy.filters.http.header_mutation
        type_urls:
        - envoy.extensions.filters.http.header_mutation.v3.HeaderMutation
        - envoy.extensions.filters.http.header_mutation.v3.HeaderMutationPerRoute
      - category: envoy.filters.http
        name: envoy.filters.http.header_to_metadata
        type_urls:
        - envoy.extensions.filters.http.header_to_metadata.v3.Config
      - category: envoy.filters.http
        name: envoy.filters.http.health_check
        type_urls:
        - envoy.extensions.filters.http.health_check.v3.HealthCheck
      - category: envoy.filters.http
        name: envoy.filters.http.ip_tagging
        type_urls:
        - envoy.extensions.filters.http.ip_tagging.v3.IPTagging
      - category: envoy.filters.http
        name: envoy.filters.http.json_to_metadata
        type_urls:
        - envoy.extensions.filters.http.json_to_metadata.v3.JsonToMetadata
      - category: envoy.filters.http
        name: envoy.filters.http.jwt_authn
        type_urls:
        - envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
        - envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
      - category: envoy.filters.http
        name: envoy.filters.http.local_ratelimit
        type_urls:
        - envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
      - category: envoy.filters.http
        name: envoy.filters.http.lua
        type_urls:
        - envoy.extensions.filters.http.lua.v3.Lua
        - envoy.extensions.filters.http.lua.v3.LuaPerRoute
      - category: envoy.filters.http
        name: envoy.filters.http.match_delegate
        type_urls:
        - envoy.extensions.common.matching.v3.ExtensionWithMatcher
        - envoy.extensions.common.matching.v3.ExtensionWithMatcherPerRoute
      - category: envoy.filters.http
        name: envoy.filters.http.oauth2
        type_urls:
        - envoy.extensions.filters.http.oauth2.v3.OAuth2
      - category: envoy.filters.http
        name: envoy.filters.http.on_demand
        type_urls:
        - envoy.extensions.filters.http.on_demand.v3.OnDemand
        - envoy.extensions.filters.http.on_demand.v3.PerRouteConfig
      - category: envoy.filters.http
        name: envoy.filters.http.original_src
        type_urls:
        - envoy.extensions.filters.http.original_src.v3.OriginalSrc
      - category: envoy.filters.http
        name: envoy.filters.http.rate_limit_quota
        type_urls:
        - envoy.extensions.filters.http.rate_limit_quota.v3.RateLimitQuotaFilterConfig
        - envoy.extensions.filters.http.rate_limit_quota.v3.RateLimitQuotaOverride
      - category: envoy.filters.http
        name: envoy.filters.http.ratelimit
        type_urls:
        - envoy.extensions.filters.http.ratelimit.v3.RateLimit
        - envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
      - category: envoy.filters.http
        name: envoy.filters.http.rbac
        type_urls:
        - envoy.extensions.filters.http.rbac.v3.RBAC
        - envoy.extensions.filters.http.rbac.v3.RBACPerRoute
      - category: envoy.filters.http
        name: envoy.filters.http.router
        type_urls:
        - envoy.extensions.filters.http.router.v3.Router
      - category: envoy.filters.http
        name: envoy.filters.http.set_filter_state
        type_urls:
        - envoy.extensions.filters.http.set_filter_state.v3.Config
      - category: envoy.filters.http
        name: envoy.filters.http.set_metadata
        type_urls:
        - envoy.extensions.filters.http.set_metadata.v3.Config
      - category: envoy.filters.http
        name: envoy.filters.http.stateful_session
        type_urls:
        - envoy.extensions.filters.http.stateful_session.v3.StatefulSession
        - envoy.extensions.filters.http.stateful_session.v3.StatefulSessionPerRoute
      - category: envoy.filters.http
        name: envoy.filters.http.tap
        type_urls:
        - envoy.extensions.filters.http.tap.v3.Tap
      - category: envoy.filters.http
        name: envoy.filters.http.thrift_to_metadata
        type_urls:
        - envoy.extensions.filters.http.thrift_to_metadata.v3.ThriftToMetadata
      - category: envoy.filters.http
        name: envoy.filters.http.wasm
        type_urls:
        - envoy.extensions.filters.http.wasm.v3.Wasm
      - category: envoy.filters.http
        name: envoy.geoip
      - category: envoy.filters.http
        name: envoy.grpc_http1_bridge
      - category: envoy.filters.http
        name: envoy.grpc_json_transcoder
      - category: envoy.filters.http
        name: envoy.grpc_web
      - category: envoy.filters.http
        name: envoy.health_check
      - category: envoy.filters.http
        name: envoy.ip_tagging
      - category: envoy.filters.http
        name: envoy.local_rate_limit
      - category: envoy.filters.http
        name: envoy.lua
      - category: envoy.filters.http
        name: envoy.rate_limit
      - category: envoy.filters.http
        name: envoy.router
      - category: envoy.http.early_header_mutation
        name: envoy.http.early_header_mutation.header_mutation
        type_urls:
        - envoy.extensions.http.early_header_mutation.header_mutation.v3.HeaderMutation
      - category: envoy.wasm.runtime
        name: envoy.wasm.runtime.null
      - category: envoy.wasm.runtime
        name: envoy.wasm.runtime.v8
      - category: envoy.retry_host_predicates
        name: envoy.retry_host_predicates.omit_canary_hosts
        type_urls:
        - envoy.extensions.retry.host.omit_canary_hosts.v3.OmitCanaryHostsPredicate
      - category: envoy.retry_host_predicates
        name: envoy.retry_host_predicates.omit_host_metadata
        type_urls:
        - envoy.extensions.retry.host.omit_host_metadata.v3.OmitHostMetadataConfig
      - category: envoy.retry_host_predicates
        name: envoy.retry_host_predicates.previous_hosts
        type_urls:
        - envoy.extensions.retry.host.previous_hosts.v3.PreviousHostsPredicate
      - category: envoy.health_check.event_sinks
        name: envoy.health_check.event_sink.file
        type_urls:
        - envoy.extensions.health_check.event_sinks.file.v3.HealthCheckEventFileSink
      - category: envoy.router.cluster_specifier_plugin
        name: envoy.router.cluster_specifier_plugin.lua
        type_urls:
        - envoy.extensions.router.cluster_specifiers.lua.v3.LuaConfig
      - category: envoy.filters.http.upstream
        name: envoy.buffer
      - category: envoy.filters.http.upstream
        name: envoy.ext_proc
      - category: envoy.filters.http.upstream
        name: envoy.filters.http.admission_control
        type_urls:
        - envoy.extensions.filters.http.admission_control.v3.AdmissionControl
      - category: envoy.filters.http.upstream
        name: envoy.filters.http.aws_lambda
        type_urls:
        - envoy.extensions.filters.http.aws_lambda.v3.Config
        - envoy.extensions.filters.http.aws_lambda.v3.PerRouteConfig
      - category: envoy.filters.http.upstream
        name: envoy.filters.http.aws_request_signing
        type_urls:
        - envoy.extensions.filters.http.aws_request_signing.v3.AwsRequestSigning
        - envoy.extensions.filters.http.aws_request_signing.v3.AwsRequestSigningPerRoute
      - category: envoy.filters.http.upstream
        name: envoy.filters.http.buffer
        type_urls:
        - envoy.extensions.filters.http.buffer.v3.Buffer
        - envoy.extensions.filters.http.buffer.v3.BufferPerRoute
      - category: envoy.filters.http.upstream
        name: envoy.filters.http.composite
        type_urls:
        - envoy.extensions.filters.http.composite.v3.Composite
      - category: envoy.filters.http.upstream
        name: envoy.filters.http.ext_proc
        type_urls:
        - envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute
        - envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
      - category: envoy.filters.http.upstream
        name: envoy.filters.http.header_mutation
        type_urls:
        - envoy.extensions.filters.http.header_mutation.v3.HeaderMutation
        - envoy.extensions.filters.http.header_mutation.v3.HeaderMutationPerRoute
      - category: envoy.filters.http.upstream
        name: envoy.filters.http.match_delegate
        type_urls:
        - envoy.extensions.common.matching.v3.ExtensionWithMatcher
        - envoy.extensions.common.matching.v3.ExtensionWithMatcherPerRoute
      - category: envoy.filters.http.upstream
        name: envoy.filters.http.upstream_codec
        type_urls:
        - envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
      - category: envoy.filters.http.upstream
        name: envoy.filters.http.wasm
        type_urls:
        - envoy.extensions.filters.http.wasm.v3.Wasm
      - category: envoy.dubbo_proxy.filters
        name: envoy.filters.dubbo.router
        type_urls:
        - envoy.extensions.filters.network.dubbo_proxy.router.v3.Router
      - category: envoy.filters.listener
        name: envoy.filters.listener.http_inspector
        type_urls:
        - envoy.extensions.filters.listener.http_inspector.v3.HttpInspector
      - category: envoy.filters.listener
        name: envoy.filters.listener.local_ratelimit
        type_urls:
        - envoy.extensions.filters.listener.local_ratelimit.v3.LocalRateLimit
      - category: envoy.filters.listener
        name: envoy.filters.listener.original_dst
        type_urls:
        - envoy.extensions.filters.listener.original_dst.v3.OriginalDst
      - category: envoy.filters.listener
        name: envoy.filters.listener.original_src
        type_urls:
        - envoy.extensions.filters.listener.original_src.v3.OriginalSrc
      - category: envoy.filters.listener
        name: envoy.filters.listener.proxy_protocol
        type_urls:
        - envoy.extensions.filters.listener.proxy_protocol.v3.ProxyProtocol
      - category: envoy.filters.listener
        name: envoy.filters.listener.tls_inspector
        type_urls:
        - envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      - category: envoy.filters.listener
        name: envoy.listener.http_inspector
      - category: envoy.filters.listener
        name: envoy.listener.original_dst
      - category: envoy.filters.listener
        name: envoy.listener.original_src
      - category: envoy.filters.listener
        name: envoy.listener.proxy_protocol
      - category: envoy.filters.listener
        name: envoy.listener.tls_inspector
      - category: envoy.request_id
        name: envoy.request_id.uuid
        type_urls:
        - envoy.extensions.request_id.uuid.v3.UuidRequestIdConfig
      - category: envoy.ssl.server_context_factory
        name: envoy.ssl.server_context_factory.default
      - category: envoy.srds_factory
        name: envoy.srds_factory.default
      - category: envoy.transport_sockets.downstream
        name: envoy.transport_sockets.alts
        type_urls:
        - envoy.extensions.transport_sockets.alts.v3.Alts
      - category: envoy.transport_sockets.downstream
        name: envoy.transport_sockets.quic
        type_urls:
        - envoy.extensions.transport_sockets.quic.v3.QuicDownstreamTransport
      - category: envoy.transport_sockets.downstream
        name: envoy.transport_sockets.raw_buffer
        type_urls:
        - envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
      - category: envoy.transport_sockets.downstream
        name: envoy.transport_sockets.starttls
        type_urls:
        - envoy.extensions.transport_sockets.starttls.v3.StartTlsConfig
      - category: envoy.transport_sockets.downstream
        name: envoy.transport_sockets.tap
        type_urls:
        - envoy.extensions.transport_sockets.tap.v3.Tap
      - category: envoy.transport_sockets.downstream
        name: envoy.transport_sockets.tcp_stats
        type_urls:
        - envoy.extensions.transport_sockets.tcp_stats.v3.Config
      - category: envoy.transport_sockets.downstream
        name: envoy.transport_sockets.tls
        type_urls:
        - envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
      - category: envoy.transport_sockets.downstream
        name: raw_buffer
      - category: envoy.transport_sockets.downstream
        name: starttls
      - category: envoy.transport_sockets.downstream
        name: tls
      - category: envoy.tracers.opentelemetry.resource_detectors
        name: envoy.tracers.opentelemetry.resource_detectors.dynatrace
        type_urls:
        - envoy.extensions.tracers.opentelemetry.resource_detectors.v3.DynatraceResourceDetectorConfig
      - category: envoy.tracers.opentelemetry.resource_detectors
        name: envoy.tracers.opentelemetry.resource_detectors.environment
        type_urls:
        - envoy.extensions.tracers.opentelemetry.resource_detectors.v3.EnvironmentResourceDetectorConfig
      - category: envoy.tracers.opentelemetry.resource_detectors
        name: envoy.tracers.opentelemetry.resource_detectors.static_config
        type_urls:
        - envoy.extensions.tracers.opentelemetry.resource_detectors.v3.StaticConfigResourceDetectorConfig
      - category: envoy.thrift_proxy.protocols
        name: auto
      - category: envoy.thrift_proxy.protocols
        name: binary
      - category: envoy.thrift_proxy.protocols
        name: binary/non-strict
      - category: envoy.thrift_proxy.protocols
        name: compact
      - category: envoy.thrift_proxy.protocols
        name: twitter
      - category: envoy.tracers
        name: envoy.dynamic.ot
      - category: envoy.tracers
        name: envoy.tracers.datadog
        type_urls:
        - envoy.config.trace.v3.DatadogConfig
      - category: envoy.tracers
        name: envoy.tracers.dynamic_ot
        type_urls:
        - envoy.config.trace.v3.DynamicOtConfig
      - category: envoy.tracers
        name: envoy.tracers.opencensus
        type_urls:
        - envoy.config.trace.v3.OpenCensusConfig
      - category: envoy.tracers
        name: envoy.tracers.opentelemetry
        type_urls:
        - envoy.config.trace.v3.OpenTelemetryConfig
      - category: envoy.tracers
        name: envoy.tracers.skywalking
        type_urls:
        - envoy.config.trace.v3.SkyWalkingConfig
      - category: envoy.tracers
        name: envoy.tracers.xray
        type_urls:
        - envoy.config.trace.v3.XRayConfig
      - category: envoy.tracers
        name: envoy.tracers.zipkin
        type_urls:
        - envoy.config.trace.v3.ZipkinConfig
      - category: envoy.tracers
        name: envoy.zipkin
      - category: envoy.geoip_providers
        name: envoy.geoip_providers.maxmind
        type_urls:
        - envoy.extensions.geoip_providers.maxmind.v3.MaxMindConfig
      - category: envoy.regex_engines
        name: envoy.regex_engines.google_re2
        type_urls:
        - envoy.extensions.regex_engines.v3.GoogleRE2
      - category: envoy.rbac.matchers
        name: envoy.rbac.matchers.upstream_ip_port
        type_urls:
        - envoy.extensions.rbac.matchers.upstream_ip_port.v3.UpstreamIpPortMatcher
      - category: envoy.filters.network
        name: envoy.echo
      - category: envoy.filters.network
        name: envoy.ext_authz
      - category: envoy.filters.network
        name: envoy.filters.network.connection_limit
        type_urls:
        - envoy.extensions.filters.network.connection_limit.v3.ConnectionLimit
      - category: envoy.filters.network
        name: envoy.filters.network.direct_response
        type_urls:
        - envoy.extensions.filters.network.direct_response.v3.Config
      - category: envoy.filters.network
        name: envoy.filters.network.dubbo_proxy
        type_urls:
        - envoy.extensions.filters.network.dubbo_proxy.v3.DubboProxy
      - category: envoy.filters.network
        name: envoy.filters.network.echo
        type_urls:
        - envoy.extensions.filters.network.echo.v3.Echo
      - category: envoy.filters.network
        name: envoy.filters.network.ext_authz
        type_urls:
        - envoy.extensions.filters.network.ext_authz.v3.ExtAuthz
      - category: envoy.filters.network
        name: envoy.filters.network.http_connection_manager
        type_urls:
        - envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      - category: envoy.filters.network
        name: envoy.filters.network.local_ratelimit
        type_urls:
        - envoy.extensions.filters.network.local_ratelimit.v3.LocalRateLimit
      - category: envoy.filters.network
        name: envoy.filters.network.mongo_proxy
        type_urls:
        - envoy.extensions.filters.network.mongo_proxy.v3.MongoProxy
      - category: envoy.filters.network
        name: envoy.filters.network.ratelimit
        type_urls:
        - envoy.extensions.filters.network.ratelimit.v3.RateLimit
      - category: envoy.filters.network
        name: envoy.filters.network.rbac
        type_urls:
        - envoy.extensions.filters.network.rbac.v3.RBAC
      - category: envoy.filters.network
        name: envoy.filters.network.redis_proxy
        type_urls:
        - envoy.extensions.filters.network.redis_proxy.v3.RedisProxy
      - category: envoy.filters.network
        name: envoy.filters.network.set_filter_state
        type_urls:
        - envoy.extensions.filters.network.set_filter_state.v3.Config
      - category: envoy.filters.network
        name: envoy.filters.network.sni_cluster
        type_urls:
        - envoy.extensions.filters.network.sni_cluster.v3.SniCluster
      - category: envoy.filters.network
        name: envoy.filters.network.sni_dynamic_forward_proxy
        type_urls:
        - envoy.extensions.filters.network.sni_dynamic_forward_proxy.v3.FilterConfig
      - category: envoy.filters.network
        name: envoy.filters.network.tcp_proxy
        type_urls:
        - envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
      - category: envoy.filters.network
        name: envoy.filters.network.thrift_proxy
        type_urls:
        - envoy.extensions.filters.network.thrift_proxy.v3.ThriftProxy
      - category: envoy.filters.network
        name: envoy.filters.network.wasm
        type_urls:
        - envoy.extensions.filters.network.wasm.v3.Wasm
      - category: envoy.filters.network
        name: envoy.filters.network.zookeeper_proxy
        type_urls:
        - envoy.extensions.filters.network.zookeeper_proxy.v3.ZooKeeperProxy
      - category: envoy.filters.network
        name: envoy.http_connection_manager
      - category: envoy.filters.network
        name: envoy.mongo_proxy
      - category: envoy.filters.network
        name: envoy.ratelimit
      - category: envoy.filters.network
        name: envoy.redis_proxy
      - category: envoy.filters.network
        name: envoy.tcp_proxy
      - category: envoy.grpc_credentials
        name: envoy.grpc_credentials.aws_iam
      - category: envoy.grpc_credentials
        name: envoy.grpc_credentials.default
      - category: envoy.grpc_credentials
        name: envoy.grpc_credentials.file_based_metadata
      - category: envoy.string_matcher
        name: envoy.string_matcher.lua
        type_urls:
        - envoy.extensions.string_matcher.lua.v3.Lua
      - category: envoy.matching.network.custom_matchers
        name: envoy.matching.custom_matchers.trie_matcher
        type_urls:
        - xds.type.matcher.v3.IPMatcher
      - category: envoy.load_balancing_policies
        name: envoy.load_balancing_policies.cluster_provided
        type_urls:
        - envoy.extensions.load_balancing_policies.cluster_provided.v3.ClusterProvided
      - category: envoy.load_balancing_policies
        name: envoy.load_balancing_policies.least_request
        type_urls:
        - envoy.extensions.load_balancing_policies.least_request.v3.LeastRequest
      - category: envoy.load_balancing_policies
        name: envoy.load_balancing_policies.maglev
        type_urls:
        - envoy.extensions.load_balancing_policies.maglev.v3.Maglev
      - category: envoy.load_balancing_policies
        name: envoy.load_balancing_policies.random
        type_urls:
        - envoy.extensions.load_balancing_policies.random.v3.Random
      - category: envoy.load_balancing_policies
        name: envoy.load_balancing_policies.ring_hash
        type_urls:
        - envoy.extensions.load_balancing_policies.ring_hash.v3.RingHash
      - category: envoy.load_balancing_policies
        name: envoy.load_balancing_policies.round_robin
        type_urls:
        - envoy.extensions.load_balancing_policies.round_robin.v3.RoundRobin
      - category: envoy.load_balancing_policies
        name: envoy.load_balancing_policies.subset
        type_urls:
        - envoy.extensions.load_balancing_policies.subset.v3.Subset
      - category: envoy.tracers.opentelemetry.samplers
        name: envoy.tracers.opentelemetry.samplers.always_on
        type_urls:
        - envoy.extensions.tracers.opentelemetry.samplers.v3.AlwaysOnSamplerConfig
      - category: envoy.tracers.opentelemetry.samplers
        name: envoy.tracers.opentelemetry.samplers.dynatrace
        type_urls:
        - envoy.extensions.tracers.opentelemetry.samplers.v3.DynatraceSamplerConfig
      - category: envoy.http.stateful_header_formatters
        name: envoy.http.stateful_header_formatters.preserve_case
        type_urls:
        - envoy.extensions.http.header_formatters.preserve_case.v3.PreserveCaseFormatterConfig
      - category: envoy.http.stateful_header_formatters
        name: preserve_case
      - category: envoy.guarddog_actions
        name: envoy.watchdog.abort_action
        type_urls:
        - envoy.watchdog.v3.AbortActionConfig
      - category: envoy.guarddog_actions
        name: envoy.watchdog.profile_action
        type_urls:
        - envoy.extensions.watchdog.profile_action.v3.ProfileActionConfig
      - category: envoy.quic.connection_id_generator
        name: envoy.quic.deterministic_connection_id_generator
        type_urls:
        - envoy.extensions.quic.connection_id_generator.v3.DeterministicConnectionIdGeneratorConfig
      - category: envoy.access_loggers
        name: envoy.access_loggers.file
        type_urls:
        - envoy.extensions.access_loggers.file.v3.FileAccessLog
      - category: envoy.access_loggers
        name: envoy.access_loggers.fluentd
        type_urls:
        - envoy.extensions.access_loggers.fluentd.v3.FluentdAccessLogConfig
      - category: envoy.access_loggers
        name: envoy.access_loggers.http_grpc
        type_urls:
        - envoy.extensions.access_loggers.grpc.v3.HttpGrpcAccessLogConfig
      - category: envoy.access_loggers
        name: envoy.access_loggers.open_telemetry
        type_urls:
        - envoy.extensions.access_loggers.open_telemetry.v3.OpenTelemetryAccessLogConfig
      - category: envoy.access_loggers
        name: envoy.access_loggers.stderr
        type_urls:
        - envoy.extensions.access_loggers.stream.v3.StderrAccessLog
      - category: envoy.access_loggers
        name: envoy.access_loggers.stdout
        type_urls:
        - envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
      - category: envoy.access_loggers
        name: envoy.access_loggers.tcp_grpc
        type_urls:
        - envoy.extensions.access_loggers.grpc.v3.TcpGrpcAccessLogConfig
      - category: envoy.access_loggers
        name: envoy.access_loggers.wasm
        type_urls:
        - envoy.extensions.access_loggers.wasm.v3.WasmAccessLog
      - category: envoy.access_loggers
        name: envoy.file_access_log
      - category: envoy.access_loggers
        name: envoy.fluentd_access_log
      - category: envoy.access_loggers
        name: envoy.http_grpc_access_log
      - category: envoy.access_loggers
        name: envoy.open_telemetry_access_log
      - category: envoy.access_loggers
        name: envoy.stderr_access_log
      - category: envoy.access_loggers
        name: envoy.stdout_access_log
      - category: envoy.access_loggers
        name: envoy.tcp_grpc_access_log
      - category: envoy.access_loggers
        name: envoy.wasm_access_log
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.application_protocol
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.ApplicationProtocolInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.destination_ip
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.DestinationIPInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.destination_port
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.direct_source_ip
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.DirectSourceIPInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.dns_san
        type_urls:
        - envoy.extensions.matching.common_inputs.ssl.v3.DnsSanInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.filter_state
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.FilterStateInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.server_name
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.ServerNameInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.source_ip
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.SourceIPInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.source_port
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.SourcePortInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.source_type
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.SourceTypeInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.subject
        type_urls:
        - envoy.extensions.matching.common_inputs.ssl.v3.SubjectInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.transport_protocol
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.TransportProtocolInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.uri_san
        type_urls:
        - envoy.extensions.matching.common_inputs.ssl.v3.UriSanInput
      - category: envoy.health_checkers
        name: envoy.health_checkers.grpc
        type_urls:
        - envoy.config.core.v3.HealthCheck.GrpcHealthCheck
      - category: envoy.health_checkers
        name: envoy.health_checkers.http
        type_urls:
        - envoy.config.core.v3.HealthCheck.HttpHealthCheck
      - category: envoy.health_checkers
        name: envoy.health_checkers.redis
        type_urls:
        - envoy.extensions.health_checkers.redis.v3.Redis
      - category: envoy.health_checkers
        name: envoy.health_checkers.tcp
        type_urls:
        - envoy.config.core.v3.HealthCheck.TcpHealthCheck
      - category: envoy.health_checkers
        name: envoy.health_checkers.thrift
        type_urls:
        - envoy.extensions.health_checkers.thrift.v3.Thrift
      - category: envoy.matching.common_inputs
        name: envoy.matching.common_inputs.environment_variable
        type_urls:
        - envoy.extensions.matching.common_inputs.environment_variable.v3.Config
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.cel_data_input
        type_urls:
        - xds.type.matcher.v3.HttpAttributesCelMatchInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.destination_ip
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.DestinationIPInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.destination_port
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.direct_source_ip
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.DirectSourceIPInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.dns_san
        type_urls:
        - envoy.extensions.matching.common_inputs.ssl.v3.DnsSanInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.filter_state
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.FilterStateInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.request_headers
        type_urls:
        - envoy.type.matcher.v3.HttpRequestHeaderMatchInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.request_trailers
        type_urls:
        - envoy.type.matcher.v3.HttpRequestTrailerMatchInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.response_headers
        type_urls:
        - envoy.type.matcher.v3.HttpResponseHeaderMatchInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.response_trailers
        type_urls:
        - envoy.type.matcher.v3.HttpResponseTrailerMatchInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.server_name
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.ServerNameInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.source_ip
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.SourceIPInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.source_port
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.SourcePortInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.source_type
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.SourceTypeInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.status_code_class_input
        type_urls:
        - envoy.type.matcher.v3.HttpResponseStatusCodeClassMatchInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.status_code_input
        type_urls:
        - envoy.type.matcher.v3.HttpResponseStatusCodeMatchInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.subject
        type_urls:
        - envoy.extensions.matching.common_inputs.ssl.v3.SubjectInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.uri_san
        type_urls:
        - envoy.extensions.matching.common_inputs.ssl.v3.UriSanInput
      - category: envoy.matching.http.input
        name: query_params
        type_urls:
        - envoy.type.matcher.v3.HttpRequestQueryParamMatchInput
      - category: envoy.http.custom_response
        name: envoy.extensions.http.custom_response.local_response_policy
        type_urls:
        - envoy.extensions.http.custom_response.local_response_policy.v3.LocalResponsePolicy
      - category: envoy.http.custom_response
        name: envoy.extensions.http.custom_response.redirect_policy
        type_urls:
        - envoy.extensions.http.custom_response.redirect_policy.v3.RedirectPolicy
      id: sidecar-1
      user_agent_build_version:
        metadata:
          build.type: RELEASE
          revision.sha: f30db0a84189cf3e681687a4a2fa1788062592d0
          revision.status: Clean
          ssl.version: BoringSSL
        version:
          major_number: 1.0
          minor_number: 31.0
          patch: 10.0
      user_agent_name: envoy
    static_resources:
      clusters:
      - connect_timeout: 5s
        load_assignment:
          cluster_name: xds_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: controlplane
                    port_value: 18000.0
        name: xds_cluster
        type: STRICT_DNS
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
  last_updated: "2026-06-07T08:37:16.187Z"
- "@type": type.googleapis.com/envoy.admin.v3.ClustersConfigDump
  dynamic_active_clusters:
  - cluster:
      "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      connect_timeout: 5s
      eds_cluster_config:
        eds_config:
          ads: {}
          resource_api_version: V3
        service_name: backend_v1
      name: backend_v1
      type: EDS
    last_updated: "2026-06-07T09:18:46.653Z"
    version_info: config-1
  - cluster:
      "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      connect_timeout: 1s
      load_assignment:
        cluster_name: ext_authz_cluster
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 9999.0
      name: ext_authz_cluster
      type: STATIC
    last_updated: "2026-06-07T08:37:16.201Z"
    version_info: config-1
  static_clusters:
  - cluster:
      "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      connect_timeout: 5s
      load_assignment:
        cluster_name: xds_cluster
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: controlplane
                  port_value: 18000.0
      name: xds_cluster
      type: STRICT_DNS
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
    last_updated: "2026-06-07T08:37:16.191Z"
  version_info: config-1
- "@type": type.googleapis.com/envoy.admin.v3.EndpointsConfigDump
  dynamic_endpoint_configs:
  - endpoint_config:
      "@type": type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
      cluster_name: backend_v1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8080.0
            health_check_config: {}
          health_status: HEALTHY
          load_balancing_weight: 1.0
        load_balancing_weight: 0.0
        locality: {}
      policy:
        overprovisioning_factor: 140.0
  - endpoint_config:
      "@type": type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
      cluster_name: ext_authz_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 9999.0
            health_check_config: {}
          health_status: HEALTHY
          load_balancing_weight: 1.0
        load_balancing_weight: 0.0
        locality: {}
      policy:
        overprovisioning_factor: 140.0
  static_endpoint_configs:
  - endpoint_config:
      "@type": type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
      cluster_name: xds_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 172.18.0.2
                port_value: 18000.0
            health_check_config: {}
            hostname: controlplane
          health_status: HEALTHY
          load_balancing_weight: 1.0
          metadata: {}
        load_balancing_weight: 0.0
        locality: {}
      policy:
        overprovisioning_factor: 140.0
- "@type": type.googleapis.com/envoy.admin.v3.ListenersConfigDump
  dynamic_listeners:
  - active_state:
      last_updated: "2026-06-07T09:18:46.659Z"
      listener:
        "@type": type.googleapis.com/envoy.config.listener.v3.Listener
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 8081.0
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              http_filters:
              - name: envoy.filters.http.ext_authz
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                  failure_mode_allow: true
                  grpc_service:
                    envoy_grpc:
                      cluster_name: ext_authz_cluster
                    timeout: 0.250s
                  transport_api_version: V3
                  with_request_body:
                    max_request_bytes: 8192.0
              - name: envoy.filters.http.jwt_authn
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
              - name: envoy.filters.http.rbac
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC
                  rules:
                    policies:
                      allow_all:
                        permissions:
                        - any: true
                        principals:
                        - any: true
              - name: envoy.filters.http.cors
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
              - name: envoy.filters.http.local_ratelimit
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                  filter_enabled:
                    default_value:
                      numerator: 100.0
                  filter_enforced:
                    default_value:
                      numerator: 100.0
                  stat_prefix: local_rate_limiter
                  token_bucket:
                    fill_interval: 1s
                    max_tokens: 10000.0
                    tokens_per_fill: 10000.0
              - name: envoy.filters.http.buffer
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.buffer.v3.Buffer
                  max_request_bytes: 1.048576e+06
              - name: envoy.filters.http.decompressor
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.decompressor.v3.Decompressor
                  decompressor_library:
                    name: envoy.compression.gzip.decompressor
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.compression.gzip.decompressor.v3.Gzip
              - name: envoy.filters.http.csrf
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.csrf.v3.CsrfPolicy
                  filter_enabled:
                    default_value: {}
              - name: envoy.filters.http.header_to_metadata
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.header_to_metadata.v3.Config
                  request_rules:
                  - header: x-request-id
                    on_header_present:
                      key: request_id
                      metadata_namespace: envoy.security
              - name: envoy.filters.http.fault
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.fault.v3.HTTPFault
                  abort:
                    http_status: 503.0
                    percentage: {}
                  max_active_faults: 0.0
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              rds:
                config_source:
                  ads: {}
                  resource_api_version: V3
                route_config_name: local_route
              stat_prefix: ingress_http
        name: listener_8081
      version_info: config-1
    name: listener_8081
  version_info: config-1
- "@type": type.googleapis.com/envoy.admin.v3.ScopedRoutesConfigDump
- "@type": type.googleapis.com/envoy.admin.v3.RoutesConfigDump
  dynamic_route_configs:
  - last_updated: "2026-06-07T09:18:46.660Z"
    route_config:
      "@type": type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      name: local_route
      virtual_hosts:
      - domains:
        - "*"
        name: local_service
        routes:
        - match:
            prefix: /test-1
          response_headers_to_add:
          - header:
              key: x-demo-config
              value: config-1
          route:
            cluster: backend_v1
            timeout: 15s
        - match:
            prefix: /test-2
          response_headers_to_add:
          - header:
              key: x-demo-config
              value: config-1
          route:
            cluster: backend_v1
            timeout: 15s
    version_info: config-1
- "@type": type.googleapis.com/envoy.admin.v3.SecretsConfigDump
